--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -52,7 +52,7 @@ id="todo"
       <p> Id: {{item.Id}} </p>
       <input type="submit" value="Submit" ng-click="editChecklist()"></input>
       </li>
-      <div ng-repeat="question in questions | filter:{isActive__c:'true'}">
+      <div ng-repeat="question in questions | filter:{isActive__c:'true'}" draggable="true">
         <p ng-show="inDB(question)">{{question.Question__c}}</p>
         <input ng-show="!inDB(question)" type="text" ng-model="question.Question__c" ng-required="true"></input>
         Order:
