--- a/Checklist.html
+++ b/Checklist.html
@@ -370,7 +370,9 @@ myApp.controller("ChecklistCtrl", function ($scope, userService, $window) {
                     $scope.photoMap[key],
                         function(result, event){
                             if (event.status) {
-                                // console.log('success!'); 
+                                // console.log('success!');
+                                var attachment_id = result;
+                                console.log('attachment: https://c.na15.visual.force.com/' + attachment_id);
                             } else if (event.type === 'exception') {
                                 console.log('Exception: ' + event.message);
                             } else {
@@ -420,7 +422,9 @@ myApp.controller("ChecklistCtrl", function ($scope, userService, $window) {
                     $scope.photoMap[key],
                         function(result, event){
                             if (event.status) {
-                                // console.log('success!'); 
+                                // console.log('success!');
+                                var attachment_id = result;
+                                console.log('attachment: https://c.na15.visual.force.com/' + attachment_id);
                             } else if (event.type === 'exception') {
                                 console.log('Exception: ' + event.message);
                             } else {
@@ -622,7 +626,7 @@ function handlePhoto(evt){
             // Extract raw base64 data from data URL
             $(evt.target.id).attr('src',e.target.result);
             imageData = e.target.result.split(',')[1];
-            var id = evt.target.id.substring(10, evt.target.id.length);
+            var id = evt.target.id.substring(evt.target.id.length-18, evt.target.id.length);
             photoMap[id] = imageData;
         };
     })(file);
