Move getting all checkklists to Checklist Utilities

--- a/Checklist.html
+++ b/Checklist.html
@@ -290,8 +290,7 @@ myApp.controller("CompletedListCtrl", function ($scope, userService) {
 });
 
 myApp.controller("NewListCtrl", function ($scope, userService) {
-    checklists = {!CheckLists};
-    $scope.checklists = checklists;
+    $scope.checklists = {!Checklists};
     });
 
 myApp.controller("PendingListCtrl", function ($scope, userService) {
